# opengl_c

./: .gitignore  .gitmodules  README.md
cubes/include/glad/: glad.h
cubes/src/: main.c
cubes/src/shaders/: fragment.glsl  vertex.glsl
cubes/src/util/: main.c
cubes_cpp/: CMakeLists.txt
cubes_cpp/src/: main.cpp
cubes_cpp/src/callbacks/: callbacks.cpp
cubes_cpp/src/shaders/: fragment.glsl
cubes_cpp/src/util/: shader.h
hello_triangle/: Makefile
hello_triangle/src/: main.c
hello_triangle/src/callbacks/: main.c
hello_triangle/src/shaders/: vertex.glsl
hello_window/src/: main.c
hello_window/src/callbacks/: main.c
hello_window/src/input/: main.c
shadertoy/src/: glad.c  main.c
shadertoy/src/shaders/: fragment.glsl  vertex.glsl
